Prevent overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -56,6 +56,10 @@ body {
     color:$body-text;
 }
 
+html,body {
+    overflow-x: hidden;
+}
+
 strong {
     font-weight: bold;
 }
